assets/css/style.css
@import url(
  https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap
);
* {
  border: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
a {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  text-decoration: none;
}
body,
html {
  margin: 0;
  background: #fff !important;
  font-family: Lato, Helvetica, Arial, sans-serif;
}
body {
  overflow-x: hidden;
}
.bg {
  height: 100%;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
}
@font-face {
  font-family: "glyphicons";
  src: url(../fonts/glyphicons-regular.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "revicons";
  src: url(../fonts/revicons.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "peicon7";
  src: url(../fonts/Pe-icon-7-stroke.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "roboto-bold";
  src: url(../fonts/Roboto-Bold.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "roboto-medium";
  src: url(../fonts/Roboto-Medium.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "roboto-regular";
  src: url(../fonts/Roboto-Regular.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "roboto-light";
  src: url(../fonts/Roboto-Light.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "opens-bold";
  src: url(../fonts/OpenSans-Bold.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "opens-condensed";
  src: url(../fonts/OpenSans-Condensed.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "opens-regular";
  src: url(../fonts/OpenSans-Regular.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "opens-light";
  src: url(../fonts/OpenSans-Light.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-black";
  src: url(../fonts/Montserrat-Black.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-exbold";
  src: url(../fonts/Montserrat-ExtraBold.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-bold";
  src: url(../fonts/Montserrat-Bold.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-smbold";
  src: url(../fonts/Montserrat-SemiBold.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-medium";
  src: url(../fonts/Montserrat-Medium.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-regular";
  src: url(../fonts/Montserrat-Regular.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-light";
  src: url(../fonts/Montserrat-Light.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-exlight";
  src: url(../fonts/Montserrat-ExtraLight.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "montserat-thin";
  src: url(../fonts/Montserrat-Thin.ttf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "gotham-book";
  src: url(../fonts/Gotham-Book.otf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "gotham-bold";
  src: url(../fonts/Gotham-Bold.otf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "gotham-medium";
  src: url(../fonts/Gotham-Medium.otf) format("opentype");
  font-display: swap;
}
@font-face {
  font-family: "gotham-light";
  src: url(../fonts/Gotham-Light.otf) format("opentype");
  font-display: swap;
}
.arvo {
  font-family: "Arvo", serif;
  font-weight: 400;
}
.arvo-italic {
  font-family: "Arvo", serif;
  font-weight: 400;
  font-style: italic;
}
.arvo-bold {
  font-family: "Arvo", serif;
  font-weight: 700;
}
.arvo-bold-italic {
  font-family: "Arvo", serif;
  font-weight: 700;
  font-style: italic;
}
.no-margin {
  margin: 0 !important;
}
.no-padding {
  padding: 0 !important;
}
.no-pl {
  padding-left: 0 !important;
}
.no-pr {
  padding-right: 0 !important;
}
.no-pt {
  padding-top: 0 !important;
}
.no-pb {
  padding-bottom: 0 !important;
}
.no-ml {
  margin-left: 0 !important;
}
.no-mr {
  margin-right: 0 !important;
}
.no-mt {
  margin-top: 0 !important;
}
.no-mb {
  margin-bottom: 0 !important;
}
.p-10 {
  padding: 10px !important;
}
.p-whatsapp {
  padding: 5px 30px 10px 10px !important;
}
.pl-5px {
  padding-left: 5px !important;
}
.ml-15 {
  margin-left: 15px !important;
}
.mt-20 {
  margin-top: 20px !important;
}
.mt-50 {
  margin-top: 50px !important;
}
.mt-150 {
  margin-top: 150px !important;
}
.mb-30 {
  margin-bottom: 30px !important;
}
.mb-50 {
  margin-bottom: 50px !important;
}
.w-100 {
  width: 100% !important;
}
.h-100 {
  height: 100% !important;
}
.h-100vh {
  height: 100vh !important;
}
.w-15 {
  width: 15px;
  margin-right: 3px;
}
.w-30 {
  width: 30px;
}
.w-80p {
  width: 80% !important;
}
.w-85p {
  width: 85% !important;
}
.txt-center {
  text-align: center !important;
}
.txt-left {
  text-align: left !important;
}
.txt-right {
  text-align: right !important;
}
#navbar {
  color: rgb(13, 26, 38);
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
  border-bottom-left-radius: 100;
}
.nav-wrapper {
  margin: auto;
  width: 100%;
  background: -moz-linear-gradient(
    top,
    rgba(255, 255, 255, 1) 50%,
    rgba(255, 255, 255, 0.64) 68%,
    rgba(255, 255, 255, 0) 100%
  );
  background: -webkit-linear-gradient(
    top,
    rgba(255, 255, 255, 1) 50%,
    rgba(255, 255, 255, 0.64) 68%,
    rgba(255, 255, 255, 0) 100%
  );
  background: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 1) 50%,
    rgba(255, 255, 255, 0.64) 68%,
    rgba(255, 255, 255, 0) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff',endColorstr='#00ffffff',GradientType=0);
  max-height: 80px;
}
.img-responsive {
  width: 100%;
}
/* ... */

